fixed back button z-index

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -36,6 +36,7 @@ body {
     height: 40px;
     border-radius: 0;
     border-bottom-left-radius: 5px;
+    z-index: 2;
 }
 
 .button:hover {
